fixes dropdown and table alignment

--- a/client/components/table/table.styl
+++ b/client/components/table/table.styl
@@ -67,6 +67,11 @@ lightGrey = #a3a3a3;
     text-align: left;
     padding: 0 20px;
     color: navyBlue;
+
+    &:last-child {
+      text-align: right;
+      padding: 0;
+    }
   }
 }
 
