--- a/client/select2.styl
+++ b/client/select2.styl
@@ -14,15 +14,11 @@
   & > * {
     float: left;
   }
-
-  &.open.focus {
-    border-radius: 11px 11px 0 0;
-  }
 }
 
 .ui-select-choices {
   text-align: left;
-  border-radius: 0 0 11px 11px;
+  border-radius: 11px;
 
 }
 
@@ -30,6 +26,6 @@
   padding: 15px 30px;
 }
 
-.selectize-dropdown {
-  margin-top: -4px;
+.selectize-dropdown .active {
+  border-radius: 11px;
 }
